--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <body onload="startTime()">
     <div class="bg">
-        <img id="morning" src="timeframe/morning.png">
-        <img id="afternoon" class="hide" src="timeframe/afternoon.png">
-        <img id="evening" class="hide" src="timeframe/evening.png">
-        <img id="night" class="hide" src="timeframe/night.png">
+        <img id="morning" src="morning.png">
+        <img id="afternoon" class="hide" src="afternoon.png">
+        <img id="evening" class="hide" src="evening.png">
+        <img id="night" class="hide" src="night.png">
     </div>
     <main>
         <span class="title">
